[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/MainMenu/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 411.0
margin_top = 247.0
margin_right = 598.0
margin_bottom = 339.0

[node name="HostGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 187.0
margin_bottom = 20.0
text = "Host Game"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 187.0
margin_bottom = 44.0

[node name="IPTextField" type="TextEdit" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 106.0
margin_bottom = 20.0
rect_min_size = Vector2( 106, 0 )
text = "127.0.0.1"

[node name="JoinGameButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 110.0
margin_right = 187.0
margin_bottom = 20.0
text = "Join Game"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 187.0
margin_bottom = 68.0
text = "Settings (not implemented)"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 187.0
margin_bottom = 92.0
text = "Exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HostGameButton" to="." method="_on_HostGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/JoinGameButton" to="." method="_on_JoinGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
